Added an automatically generated TypeScript client from the API Service. Implemented this client in the front end.
