# todo_service_api/todo_service_api/Controllers/ToDoController.cs
@@ -1,4 +1,5 @@
 using Microsoft.AspNetCore.Mvc;
+using todo_service_api.Services;
 
 namespace todo_service_api.Controllers
 {
@@ -6,12 +7,35 @@ namespace todo_service_api.Controllers
     [Route("[controller]")]
     public class ToDoController : ControllerBase
     {
-        public ToDoController() {}
+        private IMockDatabase MockDatabase { get; }
+
+        public ToDoController(IMockDatabase mockDatabase)
+        {
+            MockDatabase = mockDatabase;
+        }
 
         [HttpGet]
         public IEnumerable<ToDoItem> Get()
         {
-            return new List<ToDoItem>();
+            return MockDatabase.Get();
+        }
+
+        [HttpPatch]
+        public ToDoItem Patch(ToDoItem item)
+        {
+            return MockDatabase.Patch(item);
+        }
+
+        [HttpPost]
+        public ToDoItem Create(ToDoItem item) 
+        { 
+            return MockDatabase.Create(item);
+        }
+
+        [HttpDelete]
+        public IEnumerable<ToDoItem> Delete(int id)
+        {
+            return MockDatabase.Delete(id);
         }
     }
 }
